--- a/evewspace/Map/templates/map_toolbar.html
+++ b/evewspace/Map/templates/map_toolbar.html
@@ -9,5 +9,6 @@
     <button id="btnExportMap" class="btn btn-xs btn-primary" onclick="GetExportMap();">Export</button>
     <button id="btnZen" class="btn btn-xs btn-primary" onclick="ToggleZen()">Zen: <span></span></button>
     <button id="btnLegend" class="btn btn-xs btn-primary" onclick="$('#legendDiv').toggle()">Legend</button>
+    <div id="slider"></div>
     <span style="margin-right: 5px; margin-left: 5px;"></span>
 </div>
