Include Jquery UI.css

--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -3,6 +3,7 @@
 {% block scripts %}
     <script type="text/javascript" src="{{STATIC_URL}}js/raphael-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/map_functions.js"></script>
+    <link rel="stylesheet" href="{{STATIC_URL}}css/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/map.css" type="text/css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/map-slate.css" type="text/css" />
     {% if is_igb %}
