Adding scaling factor option in the user/display settings

--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{STATIC_URL}}css/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/map.css" type="text/css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/map-slate.css" type="text/css" />
+    <link rel="stylesheet" href="{{STATIC_URL}}css/slider.css" type="text/css" />
     {% if is_igb %}
     <script type="text/javascript">var is_igb = true;</script>
     {% else %}
