--- a/evewspace/Map/templates/map_settings.html
+++ b/evewspace/Map/templates/map_settings.html
@@ -1,3 +1,7 @@
+{% block scripts %}
+	<link rel="stylesheet" href="{{STATIC_URL}}css/jquery-ui.css" type="text/css" />
+	<link rel="stylesheet" href="{{STATIC_URL}}css/slider.css" type="text/css" />
+{% endblock %}
 <div id="map_accordion">
     {% load static %}
     {% load mapconfig %}
