--- a/evewspace/Map/templates/display_settings.html
+++ b/evewspace/Map/templates/display_settings.html
@@ -61,6 +61,13 @@
             <input type='radio' name='render_collapsed' value='0' {% if render_collapsed == '0' %}checked='checked'{% endif %} /> No
         </div>
     </div>
+    <div class='form-group'>
+        <label class='control-label col-md-5'>Scaling factor:</label>
+        <div class='col-md-7'>
+            <input id='scalingFactor' class="scale_factor_input" type='hidden' name='scaling_factor' value='{{scaling_factor}}'>
+            <div class="slider"></div>
+        </div>
+    </div>
 
     <input type="submit" class="btn btn-primary btn-sm" value="Save Display Settings">
 </form>
@@ -78,4 +85,15 @@
                 return false;
                 });
     {% endif %}
+	$(function() {
+	    $( ".slider" ).slider({
+		    value: {{scaling_factor}},
+		    min: 0,
+		    max: 2,
+		    step: 0.1,
+		    slide: function( event, ui ) {
+		        $('.scale_factor_input').val(ui.value); 
+		    }
+	    });
+	});	
 </script>
