--- a/evewspace/Map/templates/display_settings.html
+++ b/evewspace/Map/templates/display_settings.html
@@ -64,8 +64,8 @@
     <div class='form-group'>
         <label class='control-label col-md-5'>Scaling factor:</label>
         <div class='col-md-7'>
-            <input id='scalingFactor' class="scale_factor_input" type='hidden' name='scaling_factor' value='{{scaling_factor}}'>
-            <div class="slider"></div>
+            <input id='{% if context_user %}user{% else %}global{% endif %}ScaleFactorInput' class="scale_factor_input" type='hidden' name='scaling_factor' value='{{scaling_factor}}'>
+            <div id='{% if context_user %}user{% else %}global{% endif %}Slider' class="slider"></div>
         </div>
     </div>
 
@@ -78,22 +78,33 @@
                 SaveProfDisplaySettings();
                 return false;
                 });
+        $(function() {
+		    $( "#userSlider" ).slider({
+			    value: {{scaling_factor}},
+			    min: 0,
+			    max: 2,
+			    step: 0.1,
+			    slide: function( event, ui ) {
+			        $('#userScaleFactorInput').val(ui.value); 
+			    }
+		    });
+		});	
     {% else %}
         $('#mapGlobalDisplayForm').submit(function(e){
                 e.preventDefault();
                 SaveDisplaySettings();
                 return false;
                 });
-    {% endif %}
-	$(function() {
-	    $( ".slider" ).slider({
-		    value: {{scaling_factor}},
-		    min: 0,
-		    max: 2,
-		    step: 0.1,
-		    slide: function( event, ui ) {
-		        $('.scale_factor_input').val(ui.value); 
-		    }
-	    });
-	});	
+        $(function() {
+		    $( "#globalSlider" ).slider({
+			    value: {{scaling_factor}},
+			    min: 0,
+			    max: 2,
+			    step: 0.1,
+			    slide: function( event, ui ) {
+			        $('#globalScaleFactorInput').val(ui.value); 
+			    }
+		    });
+		});	
+    {% endif %}	
 </script>
