Fix small JS bug to hide modalholder

--- a/evewspace/Map/templates/igb_system_add_dialog.html
+++ b/evewspace/Map/templates/igb_system_add_dialog.html
@@ -80,10 +80,10 @@
                         });
             $('#btnIGBAdd').click(function(e){
                         AddSystem();
-                        $('#modalHolder').parent().hide;
+                        $('#modalHolder').parent().hide();
                         });
             $('#btnClose').click(function(e){
-                        $('#modalHolder').parent().hide;
+                        $('#modalHolder').parent().hide();
                     });
         </script>
 
