UI alignments system tooltip - template

--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -1,7 +1,11 @@
 {% for mapsys in map_systems %}
 <div id="sys{{mapsys.pk}}Tip" class="systemTooltip tip">
 <div class="mapSysInfo row">
-   <div class="sysClassSpan col-md-12">
+{% if mapsys.system.pilot_list %}
+    <div class="sysClassSpan col-md-6" style="width: 300px">
+{% else %}
+	<div class="sysClassSpan col-md-12">
+{% endif %}
        <h4 class="sysFriendlySpan">{{mapsys.friendlyname}}{% if mapsys.parent_wormhole.collapsed %} - COLLAPSED{% endif %}</h4>
         <div> 
             <strong>Name: {{mapsys.system.name}} </strong>
@@ -48,10 +52,9 @@
         Last Scanned: {{mapsys.system.lastscanned|naturaltime}}
     </span><br />
     {% if mapsys.system.is_kspace %}
-     <span class="statsText bg-inverse"> NPC: {{mapsys.system.npckills}} Ship: {{mapsys.system.shipkills}} Pod: {{mapsys.system.podkills}} Jumps: {{mapsys.system.get_spec.jumps}}</span> 
-     <br /> 
+     <div class="statsText"> NPC: {{mapsys.system.npckills}} Ship: {{mapsys.system.shipkills}} Pod: {{mapsys.system.podkills}} Jumps: {{mapsys.system.get_spec.jumps}}</div>
      {% endif %}
-     <p class="statusText bg-success">SIG: {{mapsys.system.signatures.count}} POS: {{mapsys.system.poses.count}} Pilots: {{mapsys.system.pilot_list|length}}</p><br />
+     <div class="statusText bg-success"> SIG: {{mapsys.system.signatures.count}} POS: {{mapsys.system.poses.count}} Pilots: {{mapsys.system.pilot_list|length}}</div><br />
     {% if mapsys.system.occupied %}
     <div class="occupiedTooltip bg-danger"> Occupied: <br /> {{mapsys.system.occupied|linebreaksbr}}</div>
     {% endif %}
@@ -60,7 +63,7 @@
     {% endif %}
 </div>
 {% if mapsys.system.pilot_list %}
-    <div class="col-md-12">
+    <div class="col-md-6" style="width: 300px">
             <table>
                 <tr>
                     <th>Pilot</th>
