Fixing a padding issue - css

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -63,6 +63,7 @@
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     border-radius: 5px;
+    padding: 5px;
 
 }
 .statusText
@@ -86,6 +87,7 @@
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     border-radius: 5px;
+    padding: 5px;
 
 }
 .occupiedText
