Add colspan to no signatures

--- a/evewspace/Map/templates/system_signatures.html
+++ b/evewspace/Map/templates/system_signatures.html
@@ -76,8 +76,8 @@
                 {% endif %}    
                 {% endif %}
             </td>
+        </tr>
         {% empty %}
-        <tr><td>No Signatures!</td></tr>
-    </tr>
-            {% endfor%}
+        <tr><td colspan='7'>No Signatures!</td></tr>
+        {% endfor%}
 </table>
