Added functionality for shattereds with triple statics.

--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -22,7 +22,7 @@
                 {% if not mapsys.system.get_spec.static1 %}
                 Unknown
                 {% else %}
-                {{mapsys.system.get_spec.static1}} ({{mapsys.system.get_spec.static1.dest_string}}) &nbsp {% if mapsys.system.get_spec.static2 %}{{mapsys.system.get_spec.static2}} ({{mapsys.system.get_spec.static2.dest_string}}){% endif %}
+                {{mapsys.system.get_spec.static1}} ({{mapsys.system.get_spec.static1.dest_string}}) &nbsp {% if mapsys.system.get_spec.static2 %}{{mapsys.system.get_spec.static2}} ({{mapsys.system.get_spec.static2.dest_string}}){% endif %} &nbsp {% if mapsys.system.get_spec.static3 %}{{mapsys.system.get_spec.static3}} ({{mapsys.system.get_spec.static3.dest_string}}){% endif %}
                 {% endif %}
             </strong>
         </div>
