--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -7,11 +7,11 @@
 	<div class="sysClassSpan col-md-12">
 {% endif %}
        <h4 class="sysFriendlySpan">{{mapsys.friendlyname}}{% if mapsys.parent_wormhole.collapsed %} - COLLAPSED{% endif %}</h4>
-        <div> 
+        <div>
             <strong>Name: {{mapsys.system.name}} </strong>
         </div>
         {% if mapsys.system.is_wspace %}
-        <div> 
+        <div>
             <strong>Class: {{mapsys.system.class_string}} </strong>
         </div>
         <div>
@@ -19,10 +19,12 @@
         </div>
         <div>
             <strong>Probable Statics: <br />
-                {% if not mapsys.system.get_spec.static1 %}
+                {% if mapsys.system.get_spec.statics.all.count == 0 %}
                 Unknown
                 {% else %}
-                {{mapsys.system.get_spec.static1}} ({{mapsys.system.get_spec.static1.dest_string}}) &nbsp {% if mapsys.system.get_spec.static2 %}{{mapsys.system.get_spec.static2}} ({{mapsys.system.get_spec.static2.dest_string}}){% endif %} &nbsp {% if mapsys.system.get_spec.static3 %}{{mapsys.system.get_spec.static3}} ({{mapsys.system.get_spec.static3.dest_string}}){% endif %}
+                {% for hole in mapsys.system.get_spec.statics.all %}
+                {{hole.name}} ({{hole.dest_string}}) &nbsp
+                {% endfor %}
                 {% endif %}
             </strong>
         </div>
