--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -46,23 +46,15 @@
 			        </div>
 			        <div class="col-md-5">
 			            <strong>Probable Statics:
-			                {% if not system.static1 %}
+			                {% if system.statics.all.count == 0 %}
 			                <span>Unknown</span>
 			                {% else %}
-			                <span title="Time: {{system.static1.lifetime}}H &nbsp Mass: {{system.static1.maxmass|intcomma}}kg &nbsp Jump Mass: {{system.static1.jumpmass|intcomma}}kg">
-			                    {{system.static1}} ({{system.static1.dest_string}})
-			            </span>
-			            {% if system.static2 %}
-			            <span title="Time: {{system.static2.lifetime}}H &nbsp Mass: {{system.static2.maxmass|intcomma}}kg &nbsp Jump Mass: {{system.static2.jumpmass|intcomma}}">
-			                {{system.static2}} ({{system.static2.dest_string}})
-			            </span>
-			            {% endif %}
-                        {% if system.static3 %}
-                        <span title="Time: {{system.static3.lifetime}}H &nbsp Mass: {{system.static3.maxmass|intcomma}}kg &nbsp Jump Mass: {{system.static3.jumpmass|intcomma}}">
-                            {{system.static3}} ({{system.static3.dest_string}})
-                        </span>
-                        {% endif %}
-			            {% endif %}
+                      {% for hole in system.statics.all %}
+			                <span title="Time: {{hole.lifetime}}H &nbsp Mass: {{hole.maxmass|intcomma}}kg &nbsp Jump Mass: {{hole.jumpmass|intcomma}}kg">
+			                    {{hole.name}} ({{hole.dest_string}}) &nbsp
+                      </span>
+                      {% endfor %}
+                      {% endif %}
 			        </strong>
 			        </div>
 			        {% endif %}
@@ -149,7 +141,7 @@
 				    	<p class="sysInfoUpdated bg-success panel-textbox">Info Updated: {{system.updated|naturaltime}}</p><br />
 				    {% endif %}
 				{% if system.is_kspace %}
-					<div class="sysDetailsFooter col-md-12"> 	
+					<div class="sysDetailsFooter col-md-12">
 				    	<div id="systemStatsPanel" class="systemStatsPanel center_text" style="margin-left: -55px;">
 				            <ul class="systemStatsList">
 				                <li class="systemStatItem">NPC Kills: {{system.npckills}}</li>
