Button text change: Add Sig -> Add  , quick fix to keep button on same line and not lose vertical space

--- a/evewspace/Map/templates/add_sig_form.html
+++ b/evewspace/Map/templates/add_sig_form.html
@@ -7,7 +7,7 @@
             {% endif %}
             {{field.label_tag}} {{field}} &nbsp;
         {% endfor %}
-        <input class="btn btn-sm btn-primary" type="submit" value="Add Sig" />
+        <input class="btn btn-sm btn-primary" type="submit" value="Add" />
     </form>
     <script type="text/javascript">
         $("#sigAddForm").submit(function(e){
