--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -392,4 +392,8 @@ ul#moveDropdown li {
 .sigAddFormDiv {
 	margin-left: 25px;	
 }
+.friendlyname {
+    font-style: italic;
+    font-size: 95%;
+}
 
