--- a/evewspace/core/static/bootstrap/css/template.less
+++ b/evewspace/core/static/bootstrap/css/template.less
@@ -75,8 +75,8 @@
 //
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
-//** Loa../fonts from this directory.
-@icon-font-path:          "../fonts/";
+//** Load fonts from this directory.
+@icon-font-path:          "../fonts/";  //"http://bootstrap-live-customizer.com/bootstrap-3.3.5/fonts/";
 //** File name for all font files.
 @icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
