added btn-mini for smaller buttons for set destination in destination list

--- a/evewspace/Map/templates/system_destinations.html
+++ b/evewspace/Map/templates/system_destinations.html
@@ -13,7 +13,7 @@
             <td>{{jumps}}</td>
             <td>{{ly}}</td>
             {% if is_igb_trusted %}
-            <td width="10%"><button class='btn btn-mini btn-primary' onclick="CCPEVE.setDestination({{dest.pk}});">D</button></td>
+            <td width="10%"><button class='btn-mini' onclick="CCPEVE.setDestination({{dest.pk}});">D</button></td>
             {% endif %}
         </tr>
     {% endfor %}
