--- a/evewspace/core/static/css/base.css
+++ b/evewspace/core/static/css/base.css
@@ -55,3 +55,16 @@
     padding-top: 1px;
     padding-bottom: 1px;
 }
+
+.btn-mini {
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 0px;
+    padding-left: 2px;
+    font-size: 15px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    background: #375a7f;
+    border-color: #375a7f;
+}
