--- a/evewspace/core/templates/settings.html
+++ b/evewspace/core/templates/settings.html
@@ -10,7 +10,7 @@
 <div class="tab-content">
     <div id="profile" class="tab-pane active">
         {% load account_tags %}
-        {% profile_sections %}
+        {% profile_settings %}
     </div>
     {% admin_panels %}
 </div>
