--- a/evewspace/account/templates/group_admin_panels.html
+++ b/evewspace/account/templates/group_admin_panels.html
@@ -1,5 +1,5 @@
-{% for key, value in group_admin_registry.items %}
-<div id="group-admin-{{key|slugify}}" class="tab-pane">
-    {% include value.0 %}
+{% for name, template in group_admin_panels %}
+<div id="group-admin-{{name|slugify}}" class="tab-pane">
+    {% include template %}
 </div>
 {% endfor %}
