--- a/evewspace/account/templates/user_admin_entries.html
+++ b/evewspace/account/templates/user_admin_entries.html
@@ -1,3 +1,3 @@
-{% for data in user_admin_registry %}
-    <li><a href="#useradmin-{{data|slugify}}" data-toggle="tab">{{data}}</a></li>
+{% for name in user_admin_entries %}
+    <li><a href="#useradmin-{{name|slugify}}" data-toggle="tab">{{name}}</a></li>
 {% endfor %}
