--- a/evewspace/account/templates/user_admin_panels.html
+++ b/evewspace/account/templates/user_admin_panels.html
@@ -1,5 +1,5 @@
-{% for name, template in user_admin_registry.items %}
+{% for name, template in user_admin_panels %}
 <div id="useradmin-{{name|slugify}}" class="tab-pane">
-    {% include template.0 %}
+    {% include template %}
 </div>
 {% endfor %}
