--- a/evewspace/core/templates/admin_entries.html
+++ b/evewspace/core/templates/admin_entries.html
@@ -1,3 +1,3 @@
-{% for data in admin_registry %}
-    <li><a href="#{{data|slugify}}" data-toggle="tab">{{data}}</a></li>
+{% for name in admin_entries %}
+    <li><a href="#{{name|slugify}}" data-toggle="tab">{{name}}</a></li>
 {% endfor %}
