--- a/evewspace/core/templates/admin_panels.html
+++ b/evewspace/core/templates/admin_panels.html
@@ -1,5 +1,5 @@
-{% for key, value in admin_registry.items %}
+{% for key, value in admin_panels %}
 <div id="{{key|slugify}}" class="tab-pane">
-    {% include value.0 %}
+    {% include value %}
 </div>
 {% endfor %}
