Adding CREST Account management

--- a/evewspace/API/templates/api_nav.html
+++ b/evewspace/API/templates/api_nav.html
@@ -11,5 +11,6 @@
 	{% if perms.API.view_full_data or perms.API.view_limited_data %}
 		<li><a href="#">API Data Viewer</a></li>
 	{% endif %}
+		<li><a href="/api/crest/overview/">CREST Account Management</a></li>
 	</ul></li>
 {% endif %}
